fix small screen overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -251,6 +251,10 @@ div.footer-content {
     width: 100%;
 }
 
+div.banner-right {
+    margin: 0px 0px;
+}
+
 }
 /** END 768px */
 
